# fastcdrgen

./: Cargo.toml  config.old1  config.old2  config.toml  readme.md
src/: cdr.rs  config.rs  consts.rs  customer.rs  generator.rs  genutils.rs  lib.rs  main.rs  operator.rs  relation.rs  utils.rs
