[package]
name = "fastcdrgen"
version = "0.1.0"
edition = "2021"

[lib]
name = "generator"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.38"
config-file = "0.2.3"
csv = "1.3.0"
gamma = "0.9.0"
polars = {version = "0.48.1", features = ["lazy"]}
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
special = "0.10.3"
uuid = {version="1.17.0", features = ["v4", "serde"]}